--- a/ea-template/src/main/webapp/common/highslide-4-1-13/highslide/highslide.css
+++ b/ea-template/src/main/webapp/common/highslide-4-1-13/highslide/highslide.css
@@ -1,6 +1,6 @@
 /**
 * @file: highslide.css 
-* @version: 4.1.9
+* @version: 4.1.13
 */
 .highslide-container div {
 	font-family: Verdana, Helvetica;
@@ -145,6 +145,7 @@ a.highslide-credits:hover i {
 	border: 1px solid silver;
 	background: #ededed;
 	margin: 2px;
+	padding: 0;
 	line-height: 0;
 	overflow: hidden;
 }
@@ -286,6 +287,9 @@ html>/**/body .highslide-gallery ul img {
 }
 .highslide-html {
 	background-color: white;
+}
+.mobile .highslide-html {
+	border: 1px solid silver;
 }
 .highslide-html-content {
 	display: none;
