--- a/ea-template/src/main/webapp/common/appframework-2-1/plugins/css/af.accordion.css
+++ b/ea-template/src/main/webapp/common/appframework-2-1/plugins/css/af.accordion.css
@@ -8,10 +8,6 @@
 	transition-delay: 100ms;
 	-webkit-transition-delay:  100ms;
 }
-.accordion div>div{
-	margin-top: 10px;
-	margin-left: 20px;
-}
 
 .accordion {
 	list-style-type: none;
@@ -28,20 +24,12 @@
 	opacity:1;
 }
 .accordion li {
-	/*display:block;
-	width:100%;*/
+	display:block;
+	width:100%;
 }
-
-.accordion li a:after {
-	text-transform: none;
-	font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-}
+/*
 .accordion li a {
-	color: inherit;
 	text-decoration: none;
-	/*text-decoration: none;
 	position: relative;
 	display: block;
 	padding: 8px 12px;
@@ -59,22 +47,6 @@
 	border-color: rgba(0, 0, 0, .3);
 	border-radius: 3px;
 	box-shadow: inset 0 1px 1px rgba(255, 255, 255, .4), 0 1px 2px rgba(0, 0, 0, .05);
-	text-decoration: none;*/
-}
-
-.tdleft{
-	width: 30%;
-	font-size: 12px;
-	text-align: right;
-	vertical-align: middle;
-	padding-right: 5px;
-}
-.tdright{
-	width: 69%;
-	font-size: 12px;
-	color: #969FA7;
-	text-align: left;
-}
-
-
+	text-decoration: none;
+}*/
 
